src/test/deca/syntax/invalid/provided/TestListDec_Inst.deca
//Erreur listdecl + listinst + listdecl
{
    int x = 2 ;
    x = 6;
    float y = 7;
}